# toodledo-mcp

./: .env.example  .gitignore  AGENT_GUIDE.md  FIX_APPLIED.md  HANDOFF.md  OAUTH_SETUP.md  PRD.md  README.md  SETUP.md  authorize.py  config.py  get_hot_list.py  main.py  pyproject.toml  run-mcp-server.sh  run-toodledo-mcp.sh  test-api.sh  test-oauth-exchange.py  test-oauth2.sh  test-tools.py  test_mcp_handshake.py  test_mcp_protocol.py  token_manager.py  toodledo_client.py
