[tool.poetry]
name = "toodledo-mcp"
version = "0.1.0"
description = "MCP server for Toodledo task management integration with Claude AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*.py", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^0.3.0"
fastapi = "^0.110"
uvicorn = ">=0.30"
requests = "^2.31.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"